# stm32-freertos-modbus-ina219

./: .gitignore  LICENSE  README  README.md  stm32-i2c-sensor-hub.ioc
.github/workflows/: ci.yml
Core/Inc/: FreeRTOSConfig.h  driver_registry.h  ina219_config.c  stm32l4xx_it.h
Core/Src/: driver_registry.c  main.c
docs/: 01-setup.md  02-sensor-task.md  03-sensor-manager.md  04-command-handling.md  05-master-tools.md  06-sensor-config-generator.md  07-test-generated-drivers.md  add-sensor.md  architecture.md  index.md  project-overview.md  protocol.md  ressource-usage.md
firmware/stm32-i2c-sensor-hub/: .mxproject  gen_firmware_sources.py  stm32-i2c-sensor-hub.ioc
host_app/: pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
host_app/cli/: __init__.py  click.py  shell.py
host_app/core/: core.py  paths.py  protocol.py  sensors.py
host_app/sensor_master/: __init__.py  backend.py  protocol.py  scheduler.py
host_app/tests/: test_backend.py  test_boards.py  test_cli.py  test_core.py  test_protocol.py  test_scheduler.py  test_sensors.py  test_shell.py
master/: requirements.in  requirements.txt  setup.py
master/sensor_master/: backend.py  boards.py  core.py  sensors.py
master/tests/: test_backend.py  test_boards.py  test_cli.py  test_core.py  test_sensors.py  (+1 more)
metadata/: protocol.json  sensor_schema.json  sensor_shema.json
scripts/: generate_headers.py  get_sensor_readings.py  send_byte.py
tests/: test_generate_firmware.py  test_generate_protocol.py  test_generate_sensor_driver.py  test_validate_sensor.py
(+86 files in other folders)
